--- a/index.html
+++ b/index.html
@@ -12,33 +12,36 @@
 </head>
 
 <body>
+    <div class="container-fluid">
         <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
-                <a class="navbar-brand" href="/">Connor Ruggles</a>
-                <button class="navbar-toggler"
-                        type="button" data-toggle="collapse"
-                        data-target="#navbarCollapse"
-                        aria-controls="navbarCollapse"
-                        aria-expanded="false"
-                        aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="/">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://github.com/rugglcon">Github</a>
-                        </li>
-                    </ul>
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="https://github.com/rugglcon/connorruggles.dev">View source</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-    <h1>Hi, I'm Connor.</h1>
+            <a class="navbar-brand" href="/">Connor Ruggles</a>
+            <button class="navbar-toggler"
+                    type="button" data-toggle="collapse"
+                    data-target="#navbarCollapse"
+                    aria-controls="navbarCollapse"
+                    aria-expanded="false"
+                    aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://github.com/rugglcon" target="_blank">Github</a>
+                    </li>
+                </ul>
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://github.com/rugglcon/connorruggles.dev" target="_blank">View source</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <h1>Hi, I'm Connor.</h1>
+        <p>Please explore the above links, or <a href="https://paypal.me/conruggles?locale.x=en_US" target="_blank">buy me a coffee</a> if you'd like to support my open source projects :)</p>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
