let's test er out

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="https://github.com/rugglcon" target="_blank">Github</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://www.linkedin.com/in/connor-ruggles-66a75b10a/" target="_blank">LinkedIn</a>
+                    </li>
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item">
