--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
             padding-top: 80px;
         }
     </style>
+    <script src="https://kit.fontawesome.com/7c08ace86f.js"></script>
     <title>Welcome</title>
 </head>
 
 <body>
     <div class="container-fluid">
-        <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
+        <nav class="navbar navbar-expand-md bg-light navbar-light mb-2 fixed-top">
             <a class="navbar-brand" href="/">Connor Ruggles</a>
             <button class="navbar-toggler"
                     type="button" data-toggle="collapse"
@@ -31,24 +32,92 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/">Home</a>
+                        <a class="nav-link" href="https://github.com/rugglcon" target="_blank"><i class="fab fa-github" style="color: #444;"></i>&nbsp;<span class="d-inline-block d-md-none">Github</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://github.com/rugglcon" target="_blank">Github</a>
+                        <a class="nav-link" href="https://twitter.com/intent/follow?screen_name=connor_bonnor" target="_blank"><i style="color: #55acee;" class="fab fa-twitter"></i>&nbsp;<span class="d-inline-block d-md-none">Twitter</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://www.linkedin.com/in/connor-ruggles-66a75b10a/" target="_blank">LinkedIn</a>
+                        <a class="nav-link" href="https://www.linkedin.com/in/connor-ruggles-66a75b10a/" target="_blank"><i class="fab fa-linkedin" style="color: #0077b5;"></i>&nbsp;<span class="d-inline-block d-md-none">LinkedIn</span></a>
                     </li>
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="https://github.com/rugglcon/connorruggles.dev" target="_blank">View source</a>
+                        <a class="nav-link" href="mailto:connor@connorruggles.dev"><i class="fas fa-envelope text-danger"></i>&nbsp;<span class="d-inline-block d-md-none">Contact Me</span></a>
                     </li>
                 </ul>
             </div>
         </nav>
-        <h1>Hi, I'm Connor.</h1>
-        <p>Please explore the above links, or <a href="https://paypal.me/conruggles?locale.x=en_US" target="_blank">buy me a coffee</a> if you'd like to support my open source projects :)</p>
+        <div class="row justify-content-center">
+            <div class="col">
+                <div class="jumbotron">
+                    <h1 class="display-4">Hi, I'm Connor.</h1>
+                    <p class="lead">A little bit about me</p>
+                    <hr class="my-3">
+                    <p>I'm a 24 year old software engineer currently residing in Boone, Iowa. I graduated from Iowa State University in December of 2018 with a bachelor's degree in software engineering. I love open source software and supporting it in any way I can. Please explore the links below, or <a href="https://paypal.me/conruggles?locale.x=en_US" target="_blank">buy me a coffee</a> if you'd like to support my own <a href="#projects">open source projects</a> :)</p>
+                </div>
+            </div>
+        </div>
+        <div id="projects" class="row justify-content-center align-items-center">
+            <div class="row col-12 my-3">
+                <div class="col-12 col-sm-6 col-md-3 text-center my-3">
+                    <div class="card">
+                        <div class="card-header">
+                            <h4>Budget Tracker</h4>
+                        </div>
+                        <div class="card-body">
+                            <p>Simple budget tracker with Angular frontend and ExpressJS/Node backend.</p>
+                            <a class="btn btn-lg btn-block btn-primary" href="https://budgettracker.connorruggles.dev" target="_blank">Check it out</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-3 text-center my-3">
+                    <div class="card">
+                        <div class="card-header">
+                            <h4>Background Changer</h4>
+                        </div>
+                        <div class="card-body">
+                            <p>Python program that makes a random Unsplash photo your background.</p>
+                            <a class="btn btn-lg btn-block btn-primary" target="_blank" href="https://pypi.org/project/backgroundchanger/">Check it out</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-3 text-center my-3">
+                    <div class="card">
+                        <div class="card-header">
+                            <h4>Githooks Node App</h4>
+                        </div>
+                        <div class="card-body">
+                                <p>A simple ExpressJS server for CI/CD for publicly available projects.</p>
+                            <a class="btn btn-lg btn-block btn-primary" target="_blank" href="https://github.com/rugglcon/githooks-node">Check it out</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-6 col-md-3 text-center my-3">
+                    <div class="card">
+                        <div class="card-header">
+                            <h4>JSBackup</h4>
+                        </div>
+                        <div class="card-body">
+                            <p>Simple JS program to compress files and extract archives.</p>
+                            <a class="btn btn-lg btn-block btn-primary" target="_blank" href="https://www.npmjs.com/package/jsbackup">Check it out</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <nav class="navbar navbar-light bg-light" style="width: 100%;">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">&copy; 2019 Connor Ruggles</li>
+                </ul>
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://github.com/rugglcon/connorruggles.dev/issues/new" target="_blank">
+                            Report a bug <i class="fas fa-bug"></i>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
