set width of logo

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <body>
     <div class="container-fluid">
         <nav class="navbar navbar-expand-md bg-light navbar-light mb-2 fixed-top">
-            <a class="navbar-brand" href="/"><img src="/logo.png" class="d-inline-block align-top" alt="Connor Ruggles"></a>
+            <a class="navbar-brand" href="/"><img width="300px" src="/logo.png" class="d-inline-block align-top" alt="Connor Ruggles"></a>
             <button class="navbar-toggler"
                     type="button" data-toggle="collapse"
                     data-target="#navbarCollapse"
