fix columns and footer

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </div>
         <div id="projects" class="row justify-content-center align-items-center">
             <div class="row col-12 my-3">
-                <div class="col-12 col-sm-6 col-md-3 text-center my-3">
+                <div class="col-12 col-sm-6 col-lg-3 text-center my-3">
                     <div class="card">
                         <div class="card-header">
                             <h4>Budget Tracker</h4>
@@ -95,7 +95,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-sm-6 col-md-3 text-center my-3">
+                <div class="col-12 col-sm-6 col-lg-3 text-center my-3">
                     <div class="card">
                         <div class="card-header">
                             <h4>Background Changer</h4>
@@ -106,7 +106,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-sm-6 col-md-3 text-center my-3">
+                <div class="col-12 col-sm-6 col-lg-3 text-center my-3">
                     <div class="card">
                         <div class="card-header">
                             <h4>Githooks Node App</h4>
@@ -117,7 +117,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-sm-6 col-md-3 text-center my-3">
+                <div class="col-12 col-sm-6 col-lg-3 text-center my-3">
                     <div class="card">
                         <div class="card-header">
                             <h4>JSBackup</h4>
@@ -129,20 +129,20 @@
                     </div>
                 </div>
             </div>
-            <nav class="navbar navbar-light bg-light" style="width: 100%;">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">&copy; 2019 Connor Ruggles</li>
-                </ul>
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://github.com/rugglcon/connorruggles.dev/issues/new" target="_blank" rel="noopener noreferrer">
-                            Report a bug <i class="fas fa-bug"></i>
-                        </a>
-                    </li>
-                </ul>
-            </nav>
         </div>
     </div>
+    <nav class="navbar navbar-light bg-light" style="width: 100%; margin-top: 175px;">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item">&copy; 2019 Connor Ruggles</li>
+        </ul>
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="https://github.com/rugglcon/connorruggles.dev/issues/new" target="_blank" rel="noopener noreferrer">
+                    Report a bug <i class="fas fa-bug"></i>
+                </a>
+            </li>
+        </ul>
+    </nav>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
