--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-149671278-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
+        function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
         gtag('config', 'UA-149671278-1');
     </script>
@@ -22,7 +22,8 @@
     <meta property="og:url" content="https://connorruggles.dev">
     <meta property="og:title" content="Connor Ruggles">
     <meta property="og:image" content="https://connorruggles.dev/logo.png">
-    <meta property="og:description" content="Personal website for Connor Ruggles, a software engineer living in Iowa. Showcasing a few open source projects that I've worked on that I'm proud of.">
+    <meta property="og:description"
+        content="Personal website for Connor Ruggles, a software engineer living in Iowa. Showcasing a few open source projects that I'm proud of.">
     <meta property="og:site_name" content="Connor Ruggles's personal website">
     <meta property="og:locale" content="en_US">
     <meta property="og:image:width" content="1200">
@@ -33,41 +34,54 @@
     <meta name="twitter:creator" content="@connor_bonnor">
     <meta name="twitter:url" content="https://connorruggles.dev">
     <meta name="twitter:title" content="Connor Ruggles">
-    <meta name="twitter:description" content="Personal website for Connor Ruggles, a software engineer living in Iowa. Showcasing a few open source projects that I've worked on that I'm proud of.">
+    <meta name="twitter:description"
+        content="Personal website for Connor Ruggles, a software engineer living in Iowa. Showcasing a few open source projects that I'm proud of.">
     <meta name="twitter:image" content="https://connorruggles.dev/logo.png">
 
 
-    <style>body{padding-top:80px;}</style>
+    <style>
+        body {
+            padding-top: 80px;
+        }
+    </style>
     <title>Connor Ruggles</title>
 </head>
 
 <body>
     <div class="container-fluid">
         <nav class="navbar navbar-expand-md bg-light navbar-light mb-2 fixed-top">
-            <a class="navbar-brand" href="/"><img width="300px" src="/logo.png" class="d-inline-block align-top" alt="Connor Ruggles"></a>
-            <button class="navbar-toggler"
-                    type="button" data-toggle="collapse"
-                    data-target="#navbarCollapse"
-                    aria-controls="navbarCollapse"
-                    aria-expanded="false"
-                    aria-label="Toggle navigation">
+            <a class="navbar-brand" href="/"><img width="300px" src="/logo.png" class="d-inline-block align-top"
+                    alt="Connor Ruggles"></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+                aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a aria-label="Github link" class="nav-link" href="https://github.com/rugglcon" target="_blank" rel="noopener noreferrer"><i class="fab fa-github" style="color: #444;"></i>&nbsp;<span class="d-inline-block d-md-none">Github</span></a>
+                        <a aria-label="Github link" class="nav-link" href="https://github.com/rugglcon" target="_blank"
+                            rel="noopener noreferrer"><i class="fab fa-github" style="color: #444;"></i>&nbsp;<span
+                                class="d-inline-block d-md-none">GitHub</span></a>
                     </li>
                     <li class="nav-item">
-                        <a aria-label="Twitter link" class="nav-link" href="https://twitter.com/intent/follow?screen_name=connor_bonnor" target="_blank" rel="noopener noreferrer"><i style="color: #55acee;" class="fab fa-twitter"></i>&nbsp;<span class="d-inline-block d-md-none">Twitter</span></a>
+                        <a aria-label="Twitter link" class="nav-link"
+                            href="https://twitter.com/intent/follow?screen_name=connor_bonnor" target="_blank"
+                            rel="noopener noreferrer"><i style="color: #55acee;" class="fab fa-twitter"></i>&nbsp;<span
+                                class="d-inline-block d-md-none">Twitter</span></a>
                     </li>
                     <li class="nav-item">
-                        <a aria-label="LinkedIn link" class="nav-link" href="https://www.linkedin.com/in/connor-ruggles-66a75b10a/" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin" style="color: #0077b5;"></i>&nbsp;<span class="d-inline-block d-md-none">LinkedIn</span></a>
+                        <a aria-label="LinkedIn link" class="nav-link"
+                            href="https://www.linkedin.com/in/connor-ruggles-66a75b10a/" target="_blank"
+                            rel="noopener noreferrer"><i class="fab fa-linkedin" style="color: #0077b5;"></i>&nbsp;<span
+                                class="d-inline-block d-md-none">LinkedIn</span></a>
                     </li>
                 </ul>
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a aria-label="Email link to conruggles@gmail.com" class="nav-link" href="mailto:connor@connorruggles.dev"><i class="fas fa-envelope text-danger"></i>&nbsp;<span class="d-inline-block d-md-none">Contact Me</span></a>
+                        <a aria-label="Email link to conruggles@gmail.com" class="nav-link"
+                            href="mailto:connor@connorruggles.dev"><i
+                                class="fas fa-envelope text-danger"></i>&nbsp;<span
+                                class="d-inline-block d-md-none">Contact Me</span></a>
                     </li>
                 </ul>
             </div>
@@ -78,7 +92,12 @@
                     <h1 class="display-4">Hi, I'm Connor.</h1>
                     <p class="lead">A little bit about me</p>
                     <hr class="my-3">
-                    <p>I'm a 24 year old software engineer currently residing in Boone, Iowa. I graduated from Iowa State University in December of 2018 with a bachelor's degree in software engineering. I love open source software and supporting it in any way I can. Please explore the links below, or <a href="https://paypal.me/conruggles?locale.x=en_US" target="_blank" rel="noopener noreferrer">buy me a coffee</a> if you'd like to support my own <a href="#projects">open source projects</a> :)</p>
+                    <p>I'm a 24-year-old software engineer currently residing in Boone, Iowa. I graduated from Iowa
+                        State University in December of 2018 with a bachelor's degree in Software Engineering. I love
+                        open source software and supporting it in any way I can. Please explore the links below, or <a
+                            href="https://paypal.me/conruggles?locale.x=en_US" target="_blank"
+                            rel="noopener noreferrer">buy me a coffee</a> if you'd like to support my own <a
+                            href="#projects">open source projects</a> :)</p>
                 </div>
             </div>
         </div>
@@ -91,7 +110,8 @@
                         </div>
                         <div class="card-body">
                             <p>Simple budget tracker with Angular frontend and ExpressJS/Node backend.</p>
-                            <a class="btn btn-lg btn-block btn-primary" href="https://budgettracker.connorruggles.dev" target="_blank" rel="noopener noreferrer">Check it out</a>
+                            <a class="btn btn-lg btn-block btn-primary" href="https://budgettracker.connorruggles.dev"
+                                target="_blank" rel="noopener noreferrer">Check it out</a>
                         </div>
                     </div>
                 </div>
@@ -102,7 +122,9 @@
                         </div>
                         <div class="card-body">
                             <p>Python program that makes a random Unsplash photo your background.</p>
-                            <a class="btn btn-lg btn-block btn-primary" target="_blank" href="https://pypi.org/project/backgroundchanger/" rel="noopener noreferrer">Check it out</a>
+                            <a class="btn btn-lg btn-block btn-primary" target="_blank"
+                                href="https://pypi.org/project/backgroundchanger/" rel="noopener noreferrer">Check it
+                                out</a>
                         </div>
                     </div>
                 </div>
@@ -112,8 +134,10 @@
                             <h4>Githooks Node App</h4>
                         </div>
                         <div class="card-body">
-                                <p>A simple ExpressJS server for CI/CD for publicly available projects.</p>
-                            <a class="btn btn-lg btn-block btn-primary" target="_blank" href="https://github.com/rugglcon/githooks-node" rel="noopener noreferrer">Check it out</a>
+                            <p>A simple ExpressJS server for CI/CD for publicly available projects.</p>
+                            <a class="btn btn-lg btn-block btn-primary" target="_blank"
+                                href="https://github.com/rugglcon/githooks-node" rel="noopener noreferrer">Check it
+                                out</a>
                         </div>
                     </div>
                 </div>
@@ -124,7 +148,8 @@
                         </div>
                         <div class="card-body">
                             <p>Simple JS program to compress files and extract archives.</p>
-                            <a class="btn btn-lg btn-block btn-primary" target="_blank" href="https://www.npmjs.com/package/jsbackup" rel="noopener noreferrer">Check it out</a>
+                            <a class="btn btn-lg btn-block btn-primary" target="_blank"
+                                href="https://www.npmjs.com/package/jsbackup" rel="noopener noreferrer">Check it out</a>
                         </div>
                     </div>
                 </div>
@@ -133,11 +158,12 @@
     </div>
     <nav class="navbar navbar-light bg-light" style="width: 100%; margin-top: 175px;">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item">&copy; 2019 Connor Ruggles</li>
+            <li class="nav-item">&copy; 2020 Connor Ruggles</li>
         </ul>
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="https://github.com/rugglcon/connorruggles.dev/issues/new" target="_blank" rel="noopener noreferrer">
+                <a class="nav-link" href="https://github.com/rugglcon/connorruggles.dev/issues/new" target="_blank"
+                    rel="noopener noreferrer">
                     Report a bug <i class="fas fa-bug"></i>
                 </a>
             </li>
